Fix: Spacing Groups Section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -736,10 +736,10 @@ h1 {
         color: $subtitle-color;
         text-align: justify;
         letter-spacing: 0.1em;
-        font-size: size(small);
+        font-size: size(smallest);
         line-height: 1.6;
         font-weight: weight(medium);
-        padding: 5% 3% 0 3%;
+        padding: 5% 7% 0 7%;
       }
     }
 
@@ -760,7 +760,7 @@ h1 {
     }
 
     &__relations {
-      height: 260vh;
+      height: 280vh;
 
       &__grid {
         height: 100%;
@@ -791,7 +791,7 @@ h1 {
             font-size: size(smallest);
             font-weight: weight(medium);
             color: $subtitle-color;
-            padding: 3% 3% 0 3%;
+            padding: 5% 7% 0 7%;
           }
         }
 
